@@ -2,12 +2,13 @@ use strict;
 use warnings;  
 
 use Test::More;
+use Test::Exception;
 use lib qw(t/lib);
 use DBICTest;
 
 my $schema = DBICTest->init_schema();
 
-plan tests => 7;
+plan tests => 10;
 
 # Test various uses of passing an object to find, create, and update on a single
 # rel accessor
@@ -40,3 +41,24 @@ plan tests => 7;
   $track->update({ disc => $another_cd });
   is($track->get_column('cd'), $another_cd->cdid, 'track matches another CD after update');
 }
+
+$schema = DBICTest->init_schema();
+
+{
+	my $artist = $schema->resultset('Artist')->create({ artistid => 666, name => 'bad religion' });
+	my $cd = $schema->resultset('CD')->create({ cdid => 187, artist => 1, title => 'how could hell be any worse?', year => 1982, genreid => undef });
+
+	ok(!defined($cd->genreid), 'genreid is NULL');
+	ok(!defined($cd->genre), 'genre accessor returns undef');
+}
+
+$schema = DBICTest->init_schema();
+
+{
+	my $artist = $schema->resultset('Artist')->create({ artistid => 666, name => 'bad religion' });
+	my $genre = $schema->resultset('Genre')->create({ name => 'disco' });
+	my $cd = $schema->resultset('CD')->create({ cdid => 187, artist => 1, title => 'how could hell be any worse?', year => 1982 });
+
+	dies_ok { $cd->genre } 'genre accessor throws without column';
+}
+
